Release 1.0.6 with shared database executor